# policyvault-solana

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
_scratch/programs-policyvault/: Anchor.toml
_scratch/programs-policyvault/programs/programs-policyvault/: Cargo.toml
_scratch/programs-policyvault/programs/programs-policyvault/src/: lib.rs
_scratch/programs-policyvault/tests/: programs-policyvault.js
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  AuditTimeline.test.tsx  AuditTimeline.tsx  DemoApp.tsx  DemoRoot.tsx  FlowDiagram.css  FlowDiagram.tsx  Providers.tsx  auditTrail.test.ts  auditTrail.ts  index.css  main.tsx  policyvault.ts  preflight.test.ts  preflight.ts  wallet-ui.css
app/src/idl/: policyvault.json
onchain/policyvault/: .gitignore  Anchor.toml  Cargo.toml  package.json
onchain/policyvault/idl/: policyvault.json
onchain/policyvault/programs/policyvault/: Cargo.toml
onchain/policyvault/programs/policyvault/src/: lib.rs
onchain/policyvault/tests/: policyvault.js
pm/: backlog.md  process.md
pm/sprints/: sprint-001-board.md  sprint-001.md
scripts/: bootstrap.sh  deploy-devnet.sh  sync-program-keypair.sh
