[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
# Pin crates that use edition2024 (incompatible with SBF toolchain's Cargo 1.79)
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
