[package]
name = "policyvault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "policyvault"

[features]
default = []

# Anchor's proc-macros use these cfg feature flags internally.
# Declaring them here avoids Rust's `unexpected_cfgs` warnings under check-cfg.
custom-heap = []
custom-panic = []
anchor-debug = []

cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
blake3 = { workspace = true }
constant_time_eq = { workspace = true }
